--- a/style.css
+++ b/style.css
@@ -82,9 +82,13 @@ main {
     cursor: pointer;
     font-size: 1em;
 }
-
+a {
+  color:white;
+  font-size: 17px;
+  text-decoration: none;
+}
 .service button:hover {
-    background-color: #5a5a5a;
+    background-color: green;
 }
 
 footer {
